--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/SlavyanDesu/NekoBocc/issues"
   },
-  "homepage": "https://github.com/SlavyanDesu/NekoBocc#readme"
+  "homepage": "https://github.com/SlavyanDesu/NekoBocc#readme",
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
+  }
 }
