--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekobocc",
   "version": "1.0.5",
-  "description": "Nekopoi scraper.",
+  "description": "Simple Nekopoi scraper built-in JavaScript.",
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
