--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "^7.17.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/test.js",
     "start": "node index.js"
   },
   "repository": {
