--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekobocc",
-  "version": "1.1.0",
-  "description": "Simple Nekopoi scraper built-in JavaScript.",
+  "version": "1.1.5",
+  "description": "Simple Nekopoi scraper.",
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
