--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "nekobocc",
-  "version": "1.1.5",
-  "description": "Simple Nekopoi scraper.",
-  "main": "index.js",
+  "version": "1.1.7",
+  "description": "NekoBocc is a simple Nekopoi scraper.",
+  "main": "./dist/esm/NekoBocc.js",
+  "types": "./dist/types/NekoBocc.d.ts",
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5"
   },
-  "devDependencies": {
-    "eslint": "^7.17.0"
-  },
+  "type": "module",
   "scripts": {
     "test": "node test/test.js",
-    "start": "node index.js"
+    "test:cjs": "node test/test.cjs",
+    "build": "tsc --project tsconfig.esm.json & tsc --project tsconfig.cjs.json && tsc --project tsconfig.types.json"
+  },
+  "exports": {
+    "import": "./dist/esm/NekoBocc.js",
+    "require": "./dist/cjs/NekoBocc.js",
+    "default": "./dist/esm/NekoBocc.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +25,17 @@
   },
   "keywords": [
     "nekopoi",
-    "scraper"
+    "scraper",
+    "api"
   ],
   "author": "SlavyanDesu",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IndonesianDev/NekoBocc/issues"
   },
-  "homepage": "https://github.com/IndonesianDev/NekoBocc#readme"
+  "homepage": "https://github.com/IndonesianDev/NekoBocc#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  }
 }
