--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nekobocc",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "NekoBocc is a simple Nekopoi scraper.",
   "main": "./dist/esm/NekoBocc.js",
   "types": "./dist/types/NekoBocc.d.ts",
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "node test/test.js",
     "test:cjs": "node test/test.cjs",
-    "build": "tsc --project tsconfig.esm.json & tsc --project tsconfig.cjs.json && tsc --project tsconfig.types.json"
+    "build": "tsc --project tsconfig.esm.json && tsc --project tsconfig.cjs.json"
   },
   "exports": {
     "import": "./dist/esm/NekoBocc.js",
