--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -13,6 +13,5 @@
     "declaration": true,
     "declarationDir": "./dist/types"
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules", "./test"]
+  "include": ["./src/**/*"]
 }
