--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "dist/cjs",
-    "declarationDir": "dist/types"
-  }
+    "outDir": "dist/cjs"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
