--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "nekobocc-ts",
-  "version": "1.2.7",
+  "version": "1.3.2",
   "description": "A simple and lightweight Nekopoi scraper.",
-  "main": "./dist/esm/src/index.js",
-  "types": "./dist/types/src/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "files": ["dist"],
+  "types": "./dist/types/index.d.ts",
   "exports": {
-    "import": "./dist/esm/src/index.js",
-    "require": "./dist/cjs/src/index.js",
-    "default": "./dist/esm/src/index.js"
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
   },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "test": "node test/index.js",
-    "build": "tsc --project tsconfig.esm.json & tsc --project tsconfig.cjs.json"
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "clean": "rimraf dist",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write \"**/*.ts\""
   },
   "author": "SlavyanDesu",
   "license": "MIT",
@@ -23,6 +29,13 @@
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
+    "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
