--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "allowJs": true,
+    "target": "ES2022",
     "moduleResolution": "Node",
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "declaration": true,
+    "isolatedModules": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "dist/types"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
