--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,9 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "ES2020",
+    "module": "ES2022",
     "outDir": "dist/esm",
-    "declarationDir": "dist/types",
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
