--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nekobocc-ts",
+  "name": "nekobocc",
   "version": "1.3.2",
   "description": "A simple and lightweight Nekopoi scraper.",
   "main": "./dist/cjs/index.js",
@@ -25,9 +25,14 @@
   },
   "author": "SlavyanDesu",
   "license": "MIT",
+  "homepage": "https://github.com/IndonesianDev/NekoBocc#readme",
   "dependencies": {
     "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IndonesianDev/NekoBocc.git"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.2",
