--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "nekobocc",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A simple and lightweight Nekopoi scraper.",
+  "type": "commonjs",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
+  "types": "./dist/cjs/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "default": "./dist/cjs/index.js"
     }
   },
   "files": [
@@ -23,14 +30,14 @@
     "hentai"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p tsconfig.esm.json",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs && tsconfig-to-dual-package",
+    "build:esm": "tsc -p tsconfig.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "clean": "rimraf dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --ignore-path .gitignore --config .prettierrc --write \"**/*.ts\"",
-    "test": "node ./test/test.js"
+    "prepublishOnly": "npm run lint:fix && npm run format && npm run build"
   },
   "author": "SlavyanDesu",
   "license": "MIT",
@@ -44,6 +51,7 @@
     "url": "git+https://github.com/IndonesianDev/NekoBocc.git"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint": "^8.32.0",
@@ -52,6 +60,7 @@
     "prettier": "^2.8.3",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
+    "tsconfig-to-dual-package": "^1.1.0",
     "typescript": "^4.9.4"
   }
 }
