--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,6 +5,6 @@
     "moduleResolution": "Node",
     "outDir": "./dist/cjs"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
