--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nekobocc",
   "version": "1.5.0",
   "description": "A simple and lightweight Nekopoi scraper.",
-  "type": "commonjs",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
@@ -52,15 +51,15 @@
     "url": "git+https://github.com/SlavyanDesu/NekoBocc.git"
   },
   "devDependencies": {
-    "globals": "^16.0.0",
     "@eslint/js": "^9.21.0",
-    "typescript-eslint": "^8.26.0",
     "@types/cheerio": "^0.22.31",
     "eslint": "^8.32.0",
+    "globals": "^16.0.0",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-to-dual-package": "^1.1.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "typescript-eslint": "^8.26.0"
   }
 }
