--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nekobocc",
   "version": "1.5.0",
-  "description": "A simple and lightweight Nekopoi scraper.",
+  "description": "A simple and lightweight NekoPoi scraper.",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
@@ -35,8 +35,7 @@
     "clean": "rimraf dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write \"**/*.ts\"",
-    "prepublishOnly": "npm run lint:fix && npm run format && npm run build",
+    "prepublishOnly": "npm run lint:fix && npm run build",
     "test": "ts-node src/index.ts"
   },
   "author": "SlavyanDesu",
@@ -55,7 +54,6 @@
     "@types/cheerio": "^0.22.31",
     "eslint": "^8.32.0",
     "globals": "^16.0.0",
-    "prettier": "^2.8.3",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-to-dual-package": "^1.1.0",
