--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.0",
   "description": "A simple and lightweight NekoPoi scraper.",
   "main": "./dist/cjs/index.js",
+  "type": "module",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
   "exports": {
