--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nekobocc",
   "version": "1.5.1",
   "description": "A simple and lightweight NekoPoi scraper.",
-  "main": "./dist/cjs/index.js",
   "type": "module",
-  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
+  "module": "./dist/esm/index.js",
   "exports": {
     ".": {
       "import": {
@@ -50,14 +50,10 @@
     "url": "git+https://github.com/SlavyanDesu/NekoBocc.git"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
     "@types/cheerio": "^0.22.31",
-    "eslint": "^8.32.0",
-    "globals": "^16.0.0",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-to-dual-package": "^1.1.0",
-    "typescript": "^5.0.2",
-    "typescript-eslint": "^8.26.0"
+    "typescript": "^5.0.2"
   }
 }
