--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
     "url": "git+https://github.com/SlavyanDesu/NekoBocc.git"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/cheerio": "^0.22.31",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
     "rimraf": "^4.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-to-dual-package": "^1.1.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   }
 }
